--- a/classes.html
+++ b/classes.html
@@ -4,13 +4,13 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 
 skin-styles Styles
 -->
-<link rel="import" href="classes/buttons.html">
-<link rel="import" href="classes/typography.html">
-<link rel="import" href="classes/grid.html">
-<link rel="import" href="classes/bootstrap.html">
+<link rel="import" href="skin-buttons/skin-buttons.html">
+<link rel="import" href="skin-typography/skin-typography.html">
+<link rel="import" href="bootstrap/grid.html">
+<link rel="import" href="bootstrap/bootstrap.html">
 
 <dom-module id="skin-styles">
   <template>
-    <style include="skin-styles-typography skin-styles-buttons"></style>
+    <style include="skin-typography skin--buttons"></style>
   </template>
 </dom-module>
