--- a/default-theme.html
+++ b/default-theme.html
@@ -1,11 +1,11 @@
-<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../polymer/polymer.html">
 
 <!--
 @license
 Copyright (c) 2017 FabricElements. All rights reserved.
 -->
 
-<link rel="import" href="../../paper-styles/color.html">
+<link rel="import" href="../paper-styles/color.html">
 
 <!-- Taken from https://www.google.com/design/spec/style/color.html#color-ui-color-application -->
 <custom-style>
