--- a/demo/index.html
+++ b/demo/index.html
@@ -27,9 +27,9 @@
 <section>
   <h3>skin-styles demos</h3>
   <ul>
-    <li><a href="./typography.html" target="_blank">Typography demo</a></li>
-    <li><a href="./buttons.html" target="_blank">Buttons demo</a></li>
-    <li><a href="./grid.html" target="_blank">Grid demo</a></li>
+    <li><a href="../skin-typography/demo/index.html" target="_blank">Typography demo</a></li>
+    <li><a href="../skin-buttons/demo/index.html" target="_blank">Buttons demo</a></li>
+    <li><a href="../bootstrap/demo/index.html" target="_blank">Grid demo</a></li>
   </ul>
 </section>
 </body>
