--- a/skin-buttons/skin-buttons.html
+++ b/skin-buttons/skin-buttons.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../../polymer/polymer.html">
-<link rel="import" href="../styles/buttons.html">
+<link rel="import" href="./buttons.html">
 
 <!--
 @license
@@ -9,11 +9,10 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 App color themes
 
 @group Skin Styles
-@pseudoElement skin-styles-buttons
-@demo demo/buttons.html
+@demo demo/index.html
 -->
 
-<dom-module id="skin-styles-buttons">
+<dom-module id="skin--buttons">
   <template>
     <style is="custom-style">
       /*noinspection ALL*/
