--- a/skin-styles.html
+++ b/skin-styles.html
@@ -6,11 +6,11 @@ The `<skin-styles>` component provides simple ways to use Material Design CSS st
 in your application. The following imports are available:
 
 The following demos are available:
-1. [buttons.html](https://github.com/FabricElements/skin-styles/blob/master/demo/buttons.html):
+1. [skin-styles-index.html](https://github.com/FabricElements/skin-styles/blob/master/demo/buttons.html):
 A complete set of custom buttons.
-2. [grid.html](https://github.com/FabricElements/skin-styles/blob/master/demo/grid.html):
+2. [index.html](https://github.com/FabricElements/skin-styles/blob/master/demo/grid.html):
 A grid layout using Bootstrap.
-3. [typography.html](https://github.com/FabricElements/skin-styles/blob/master/demo/typography.html):
+3. [skin-index.html](https://github.com/FabricElements/skin-styles/blob/master/demo/typography.html):
 A Set of default styles for typography extending the paper default styles.
 
 We recommend importing each of these individual files, and using the style mixins
