--- a/skin-typography/demo/index.html
+++ b/skin-typography/demo/index.html
@@ -11,17 +11,16 @@ Copyright (c) 2017 FabricElements. All rights reserved.
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
-  <title>skin-styles-typography demo</title>
+  <title>skin-typography demo</title>
 
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="../../polymer/lib/elements/custom-style.html">
-
-  <link rel="import" href="../../paper-button/paper-button.html">
-  <link rel="import" href="../classes/typography.html">
-  <link rel="import" href="../styles/default-theme.html">
+  <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
+  <link rel="import" href="../../../polymer/lib/elements/custom-style.html">
+  <link rel="import" href="../../../paper-button/paper-button.html">
+  <link rel="import" href="../skin-typography.html">
+  <link rel="import" href="../../default-theme.html">
 
   <custom-style>
-    <style include="skin-styles-typography">
+    <style include="skin-typography">
       body {
         margin: 0;
         padding: 1rem;
@@ -104,7 +103,7 @@ Copyright (c) 2017 FabricElements. All rights reserved.
   </custom-style>
 </head>
 <body>
-<h1>skin-styles-typography</h1>
+<h1>skin-typography</h1>
 
 <section id="default-theme">
   <h2>default-theme.html</h2>
