--- a/skin-typography/skin-typography.html
+++ b/skin-typography/skin-typography.html
@@ -6,15 +6,14 @@
 @license
 Copyright (c) 2017 FabricElements. All rights reserved.
 
-`skin-styles-typography`
+`skin-typography`
 Typography Sizes applied to paper classes.
 
 @group Skin Styles
-@pseudoElement skin-styles-typography
-@demo demo/typography.html
+@demo demo/index.html
 -->
 
-<dom-module id="skin-styles-typography">
+<dom-module id="skin-typography">
   <template>
     <style is="custom-style">
       /*
