--- a/bootstrap/demo/index.html
+++ b/bootstrap/demo/index.html
@@ -5,7 +5,6 @@
 Copyright (c) 2017 FabricElements. All rights reserved.
 -->
 
-<!--suppress ALL -->
 <html>
 <head>
 
@@ -14,10 +13,10 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 
   <title>skin-styles-grid demo</title>
 
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="../../polymer/lib/elements/custom-style.html">
+  <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
+  <link rel="import" href="../../../polymer/lib/elements/custom-style.html">
 
-  <link rel="import" href="../classes/grid.html">
+  <link rel="import" href="../grid.html">
   <custom-style>
     <style>
       body {
@@ -190,7 +189,7 @@ Copyright (c) 2017 FabricElements. All rights reserved.
   <hr>
 
   <h3>Column clearing</h3>
-  <p><a href="../../layout/grid/#example-responsive-column-resets">Clear floats</a> at specific breakpoints to
+  <p><a href="../../../layout/grid/#example-responsive-column-resets">Clear floats</a> at specific breakpoints to
     prevent
     awkward wrapping with uneven content.</p>
   <div class="row">
