--- a/skin-buttons/buttons.html
+++ b/skin-buttons/buttons.html
@@ -4,7 +4,7 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 -->
 
 <link rel="import" href="../../polymer/polymer.html">
-<link rel="import" href="default-theme.html">
+<link rel="import" href="../default-theme.html">
 
 <custom-style>
   <style is="custom-style">
