--- a/skin-buttons/demo/index.html
+++ b/skin-buttons/demo/index.html
@@ -11,18 +11,17 @@ Copyright (c) 2017 FabricElements. All rights reserved.
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
-  <title>skin-styles-buttons demo</title>
+  <title>skin--buttons demo</title>
 
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="../../polymer/lib/elements/custom-style.html">
-
-  <link rel="import" href="../../paper-styles/demo-pages.html">
-  <link rel="import" href="../../paper-button/paper-button.html">
-  <link rel="import" href="../classes/buttons.html">
-  <link rel="import" href="../styles/default-theme.html">
+  <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
+  <link rel="import" href="../../../polymer/lib/elements/custom-style.html">
+  <link rel="import" href="../../../paper-styles/demo-pages.html">
+  <link rel="import" href="../../../paper-button/paper-button.html">
+  <link rel="import" href="../../default-theme.html">
+  <link rel="import" href="../skin-buttons.html">
 
   <custom-style>
-    <style include="skin-styles-buttons">
+    <style include="skin--buttons">
       body {
         margin: 0;
         padding: 1rem;
@@ -38,7 +37,7 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 </head>
 
 <body>
-<h1>skin-styles-buttons</h1>
+<h1>skin--buttons</h1>
 
 <section is="buttons">
   <h2>buttons.html</h2>
