--- a/styles.html
+++ b/styles.html
@@ -5,5 +5,5 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 skin-styles Styles
 -->
 <link rel="import" href="../paper-styles/paper-styles.html">
-<link rel="import" href="styles/default-theme.html">
-<link rel="import" href="styles/buttons.html">
+<link rel="import" href="default-theme.html">
+<link rel="import" href="skin-buttons/buttons.html">
