--- a/animate/animate.html
+++ b/animate/animate.html
@@ -6,7 +6,7 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 Animate
 
 @group Skin Styles
-@demo demo/animate.html
+@pseudoElement animate
 -->
 <style>
   /*!
