--- a/skin-buttons/skin-buttons.html
+++ b/skin-buttons/skin-buttons.html
@@ -9,6 +9,7 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 App color themes
 
 @group Skin Styles
+@pseudoElement skin-buttons
 @demo demo/index.html
 -->
 
