--- a/skin-typography/skin-typography.html
+++ b/skin-typography/skin-typography.html
@@ -10,6 +10,7 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 Typography Sizes applied to paper classes.
 
 @group Skin Styles
+@pseudoElement skin-typography
 @demo demo/index.html
 -->
 
