--- a/bootstrap/grid.html
+++ b/bootstrap/grid.html
@@ -7,7 +7,7 @@ https://github.com/twbs/bootstrap/blob/v4-dev/dist/css/bootstrap-grid.css
 
 @group Skin Styles
 @pseudoElement grid
-@demo demo/index.html
+@demo demo/bootstrap/index.html
 -->
 
 <style>
