Rename and set demos

--- a/classes.html
+++ b/classes.html
@@ -11,6 +11,6 @@ skin-styles Styles
 
 <dom-module id="skin-styles">
   <template>
-    <style include="skin-styles-typography skin-styles-buttons"></style>
+    <style include="skin-typography skin-buttons"></style>
   </template>
 </dom-module>
