--- a/classes/buttons.html
+++ b/classes/buttons.html
@@ -9,11 +9,10 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 App color themes
 
 @group Skin Styles
-@pseudoElement skin-styles-buttons
-@demo demo/buttons.html
+@demo demo/buttons.html skin-buttons
 -->
 
-<dom-module id="skin-styles-buttons">
+<dom-module id="skin-buttons">
   <template>
     <style is="custom-style">
       /*noinspection ALL*/
