--- a/classes/grid.html
+++ b/classes/grid.html
@@ -6,8 +6,7 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 https://github.com/twbs/bootstrap/blob/v4-dev/dist/css/bootstrap-grid.css
 
 @group Skin Styles
-@pseudoElement grid
-@demo demo/grid.html
+@demo demo/grid.html grid
 -->
 
 <style>
