--- a/classes/bootstrap.html
+++ b/classes/bootstrap.html
@@ -6,7 +6,7 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 https://github.com/twbs/bootstrap/blob/v4-dev/dist/css/bootstrap.css
 
 @group Skin Styles
-@demo demo/grid.html
+@demo demo/grid.html bootstrap
 -->
 
 <style>
