--- a/demo/buttons.html
+++ b/demo/buttons.html
@@ -11,7 +11,7 @@ Copyright (c) 2017 FabricElements. All rights reserved.
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
-  <title>skin-styles-buttons demo</title>
+  <title>skin-buttons demo</title>
 
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../../polymer/lib/elements/custom-style.html">
@@ -22,7 +22,7 @@ Copyright (c) 2017 FabricElements. All rights reserved.
   <link rel="import" href="../styles/default-theme.html">
 
   <custom-style>
-    <style include="skin-styles-buttons">
+    <style include="skin-buttons">
       body {
         margin: 0;
         padding: 1rem;
@@ -38,7 +38,7 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 </head>
 
 <body>
-<h1>skin-styles-buttons</h1>
+<h1>skin-buttons</h1>
 
 <section is="buttons">
   <h2>buttons.html</h2>
