Rename and set demos v3

--- a/skin-styles.html
+++ b/skin-styles.html
@@ -17,6 +17,7 @@ We recommend importing each of these individual files, and using the style mixin
 available in each ones, rather than the aggregated `skin-styles.html` as a whole.
 
 @group Skin Styles
+@pseudoElement skin-styles
 @demo demo/buttons.html skin-buttons
 @demo demo/typography.html skin-typography
 -->
