Module names simplified
Modules update

--- a/skin-styles.html
+++ b/skin-styles.html
@@ -18,6 +18,8 @@ available in each ones, rather than the aggregated `skin-styles.html` as a whole
 
 @group Skin Styles
 @pseudoElement skin-styles
+@demo demo/buttons.html skin-buttons
+@demo demo/typography.html skin-typography
 -->
 <link rel="import" href="styles.html">
 <link rel="import" href="classes.html">
