Migrate to Polymer 3

--- a/demo/grid.html
+++ b/demo/grid.html
@@ -13,11 +13,13 @@ Copyright (c) 2017 FabricElements. All rights reserved.
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
   <title>skin-styles-grid demo</title>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+  <script type="module">
+    import '@polymer/polymer/lib/elements/custom-style.js';
+  </script>
+  <script type="module" src="../classes/grid.js"></script>
 
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="../../polymer/lib/elements/custom-style.html">
-
-  <link rel="import" href="../classes/grid.html">
   <custom-style>
     <style>
       body {
@@ -223,7 +225,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </div>
   </div>
 
-</div> <!-- /container -->
-
+</div>
 </body>
 </html>
