--- a/demo/buttons.html
+++ b/demo/buttons.html
@@ -13,13 +13,15 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 
   <title>skin-buttons demo</title>
 
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="../../polymer/lib/elements/custom-style.html">
-
-  <link rel="import" href="../../paper-styles/demo-pages.html">
-  <link rel="import" href="../../paper-button/paper-button.html">
-  <link rel="import" href="../classes/buttons.html">
-  <link rel="import" href="../styles/default-theme.html">
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+  <script type="module">
+    import '@polymer/polymer/lib/elements/custom-style.js';
+    import '@polymer/paper-styles/demo-pages.js';
+    import '@polymer/paper-button/paper-button.js';
+  </script>
+  <script type="module" src="../classes/buttons.js"></script>
+  <script type="module" src="../styles/default-theme.js"></script>
 
   <custom-style>
     <style include="skin-buttons">
@@ -36,11 +38,7 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </style>
   </custom-style>
 </head>
-
-<body>
-<h1>skin-buttons</h1>
-
-<section is="buttons">
+<section id="buttons">
   <h2>buttons.html</h2>
   <p>Use paper-button attributes like "raised" to continue manipulating the styles</p>
   <br>
@@ -193,7 +191,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     <br>
     <hr>
 
-
   </article>
   <br>
   <article>
@@ -323,8 +320,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     <br>
     <hr>
   </article>
-
 </section>
-
 </body>
 </html>
