--- a/classes/animate.html
+++ b/classes/animate.html
@@ -1,6 +1,6 @@
 <!--
 @license
-Copyright (c) 2017 FabricElements. All rights reserved.
+Copyright (c) FabricElements. All rights reserved.
 
 `animate`
 Animate
