--- a/demo/typography.html
+++ b/demo/typography.html
@@ -2,7 +2,7 @@
 
 <!--
 @license
-Copyright (c) 2017 FabricElements. All rights reserved.
+Copyright (c) FabricElements. All rights reserved.
 -->
 
 <html>
@@ -14,10 +14,8 @@ Copyright (c) 2017 FabricElements. All rights reserved.
   <title>skin-typography demo</title>
 
   <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
   <script type="module">
-    import '@polymer/polymer/lib/elements/custom-style.js';
-  </script>
+    import '@polymer/polymer/lib/elements/custom-style.js';</script>
   <script type="module" src="../classes/typography.js"></script>
   <script type="module" src="../styles/default-theme.js"></script>
 
@@ -105,6 +103,8 @@ Copyright (c) 2017 FabricElements. All rights reserved.
   </custom-style>
 </head>
 <body>
+
+
 <section id="default-theme">
   <h2>default-theme.html</h2>
 
