--- a/demo/buttons.html
+++ b/demo/buttons.html
@@ -2,7 +2,7 @@
 
 <!--
 @license
-Copyright (c) 2017 FabricElements. All rights reserved.
+Copyright (c) FabricElements. All rights reserved.
 -->
 
 <html>
@@ -13,14 +13,12 @@ Copyright (c) 2017 FabricElements. All rights reserved.
 
   <title>skin-buttons demo</title>
 
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="../../polymer/lib/elements/custom-style.html">
-
-  <link rel="import" href="../../paper-styles/demo-pages.html">
-  <link rel="import" href="../../paper-button/paper-button.html">
-  <link rel="import" href="../classes/buttons.html">
-  <link rel="import" href="../styles/default-theme.html">
-
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script type="module" src="../classes/buttons.js"></script>
+  <script type="module" src="../styles/default-theme.js"></script>
+  <script type="module">
+    import '@polymer/paper-button/paper-button.js';
+    import '@polymer/polymer/lib/elements/custom-style.js';</script>
   <custom-style>
     <style include="skin-buttons">
       body {
@@ -36,16 +34,12 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </style>
   </custom-style>
 </head>
-
 <body>
-<h1>skin-buttons</h1>
-
-<section is="buttons">
+<section id="buttons">
   <h2>buttons.html</h2>
   <p>Use paper-button attributes like "raised" to continue manipulating the styles</p>
   <br>
   <br>
-
   <article>
     <h3>btn-rounded</h3>
     <paper-button raised class="btn-rounded">
@@ -76,7 +70,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </paper-button>
     <br>
     <br>
-
     <h3>btn-fill--primary-color</h3>
     <paper-button class="btn-fill--primary-color">
       hello
@@ -87,7 +80,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     <br>
     <br>
     <hr>
-
     <h3>btn--light-primary-color</h3>
     <paper-button class="btn--light-primary-color">
       hello
@@ -97,7 +89,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </paper-button>
     <br>
     <br>
-
     <h3>btn-fill--light-primary-color</h3>
     <paper-button class="btn-fill--light-primary-color">
       hello
@@ -108,7 +99,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     <br>
     <br>
     <hr>
-
     <h3>btn--dark-primary-color</h3>
     <paper-button class="btn--dark-primary-color">
       hello
@@ -118,7 +108,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </paper-button>
     <br>
     <br>
-
     <h3>btn-fill--dark-primary-color</h3>
     <paper-button class="btn-fill--dark-primary-color">
       hello
@@ -129,7 +118,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     <br>
     <br>
     <hr>
-
     <h3>btn--accent-color</h3>
     <paper-button class="btn--accent-color">
       hello
@@ -139,7 +127,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </paper-button>
     <br>
     <br>
-
     <h3>btn-fill--accent-color</h3>
     <paper-button class="btn-fill--accent-color">
       hello
@@ -150,7 +137,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     <br>
     <br>
     <hr>
-
     <h3>btn--light-accent-color</h3>
     <paper-button class="btn--light-accent-color">
       hello
@@ -160,7 +146,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </paper-button>
     <br>
     <br>
-
     <h3>btn-fill--light-accent-color</h3>
     <paper-button class="btn-fill--light-accent-color">
       hello
@@ -171,7 +156,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     <br>
     <br>
     <hr>
-
     <h3>btn--dark-accent-color</h3>
     <paper-button class="btn--dark-accent-color">
       hello
@@ -181,7 +165,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </paper-button>
     <br>
     <br>
-
     <h3>btn-fill--dark-accent-color</h3>
     <paper-button class="btn-fill--dark-accent-color">
       hello
@@ -192,8 +175,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     <br>
     <br>
     <hr>
-
-
   </article>
   <br>
   <article>
@@ -206,7 +187,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </paper-button>
     <br>
     <br>
-
     <h3>btn-fill--secondary-color</h3>
     <paper-button class="btn-fill--secondary-color">
       hello
@@ -217,7 +197,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     <br>
     <br>
     <hr>
-
     <h3>btn--light-secondary-color</h3>
     <paper-button class="btn--light-secondary-color">
       hello
@@ -227,7 +206,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </paper-button>
     <br>
     <br>
-
     <h3>btn-fill--light-secondary-color</h3>
     <paper-button class="btn-fill--light-secondary-color">
       hello
@@ -238,7 +216,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     <br>
     <br>
     <hr>
-
     <h3>btn--dark-secondary-color</h3>
     <paper-button class="btn--dark-secondary-color">
       hello
@@ -248,7 +225,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </paper-button>
     <br>
     <br>
-
     <h3>btn-fill--dark-secondary-color</h3>
     <paper-button class="btn-fill--dark-secondary-color">
       hello
@@ -259,7 +235,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     <br>
     <br>
     <hr>
-
     <h3>btn--accent-secondary-color</h3>
     <paper-button class="btn--accent-secondary-color">
       hello
@@ -269,7 +244,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </paper-button>
     <br>
     <br>
-
     <h3>btn-fill--accent-secondary-color</h3>
     <paper-button class="btn-fill--accent-secondary-color">
       hello
@@ -280,7 +254,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     <br>
     <br>
     <hr>
-
     <h3>btn--light-accent-secondary-color</h3>
     <paper-button class="btn--light-accent-secondary-color">
       hello
@@ -290,7 +263,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </paper-button>
     <br>
     <br>
-
     <h3>btn-fill--light-accent-secondary-color</h3>
     <paper-button class="btn-fill--light-accent-secondary-color">
       hello
@@ -301,7 +273,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     <br>
     <br>
     <hr>
-
     <h3>btn--dark-accent-secondary-color</h3>
     <paper-button class="btn--dark-accent-secondary-color">
       hello
@@ -311,7 +282,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     </paper-button>
     <br>
     <br>
-
     <h3>btn-fill--dark-accent-secondary-color</h3>
     <paper-button class="btn-fill--dark-accent-secondary-color">
       hello
@@ -323,8 +293,6 @@ Copyright (c) 2017 FabricElements. All rights reserved.
     <br>
     <hr>
   </article>
-
 </section>
-
 </body>
 </html>
